infra/k8s-prod/ingress-srv.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
# data
#final
#da
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/(.*)
            pathType: Prefix 
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: tickets-srv 
                port:
                  number: 4000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv 
                port:
                  number: 4001
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-srv 
                port:
                  number: 4006
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
